src/test/deca/context/valid/personalTests/testContextObjetAttributs3.deca
// Test la declaration d'un objet avec un bloc d'initialisation et l'appel d'une methode

class A {
    int a;
    void m() {
        println("m");
    }

    void n() {
        println(this.a);
    }
}

{
    A a;
    a = new A();
    a.m();
    a.n();
    println("ok");
}