src/test/deca/context/invalid/personalTests/ClasseInexistante.deca
// Test d'utilisation d'une classe non importée.


{
    Date now = new Date(); // Erreur : Date n'est pas importé.
}